unselectable bug squishing

--- a/index.css
+++ b/index.css
@@ -108,3 +108,10 @@ li input:focus {
 ::selection {
     background-color: transparent;
 }
+.unselectable {
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}
